force-app/main/default/objects/Voice_Company_CC__c/Voice_Company_CC__c.object-meta.xml
<CustomObject>
    <description>Abstract Credit Card Object for Voice - Company Credit Cards</description>
    <label>V: Credit Cards</label>
    <nameField>
        <displayFormat>VCC-{00000000}</displayFormat>
        <label>V: Company CC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>V: Credit Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>