force-app/main/default/objects/Voice_Company_CC__c/fields/Billing_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_1__c</fullName>
    <description>Voice - WCSA - Company CC Billing Address #1</description>
    <inlineHelpText>Voice - WCSA - Company CC Billing Address #1</inlineHelpText>
    <label>Billing Address #1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>