force-app/main/default/objects/Voice_Company_CC__c/fields/Billing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_2__c</fullName>
    <description>Voice - WCSA - Company CC Billing Address #2</description>
    <inlineHelpText>Voice - WCSA - Company CC Billing Address #2</inlineHelpText>
    <label>Billing Address #2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>