force-app/main/default/objects/Voice_Company_CC__c/fields/Billing_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_3__c</fullName>
    <description>Voice - WCSA - Company CC Billing Address #3</description>
    <inlineHelpText>Voice - WCSA - Company CC Billing Address #3</inlineHelpText>
    <label>Billing Address #3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>