force-app/main/default/objects/Voice_Company_CC__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>Voice - WCSA - Displaying Card Type</description>
    <formula>Last_Name__c</formula>
    <inlineHelpText>Voice - WCSA - Displaying Card Type</inlineHelpText>
    <label>Card Type</label>
    <type>Text</type>
</CustomField>