force-app/main/default/objects/Voice_Company_CC__c/fields/CC_City__c.field-meta.xml
<CustomField>
    <fullName>CC_City__c</fullName>
    <description>Voice - WCSA - Company CC Billing City</description>
    <inlineHelpText>Voice - WCSA - Company CC Billing City</inlineHelpText>
    <label>CC City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>