force-app/main/default/objects/Voice_Company_CC__c/fields/CC_Country__c.field-meta.xml
<CustomField>
    <fullName>CC_Country__c</fullName>
    <description>Voice - WCSA - Company CC Billing Country</description>
    <inlineHelpText>Voice - WCSA - Company CC Billing Country</inlineHelpText>
    <label>CC Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>