force-app/main/default/objects/Voice_Company_CC__c/fields/CC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiration_Date__c</fullName>
    <description>Voice - WCSA - Company CC Expiration Date</description>
    <inlineHelpText>Voice - WCSA - Company CC Expiration Date</inlineHelpText>
    <label>CC Expiration Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>