force-app/main/default/objects/Voice_Company_CC__c/fields/CC_Priority__c.field-meta.xml
<CustomField>
    <fullName>CC_Priority__c</fullName>
    <description>WCSA - Company CC - Priority</description>
    <inlineHelpText>WCSA - Company CC - Priority</inlineHelpText>
    <label>CC Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>