force-app/main/default/objects/Voice_Company_CC__c/fields/CC_State__c.field-meta.xml
<CustomField>
    <fullName>CC_State__c</fullName>
    <description>Voice - WCSA - Company CC Billing State</description>
    <inlineHelpText>Voice - WCSA - Company CC Billing State</inlineHelpText>
    <label>CC State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>NM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>