force-app/main/default/objects/Voice_Company_CC__c/fields/CC_Zip__c.field-meta.xml
<CustomField>
    <fullName>CC_Zip__c</fullName>
    <description>Voice - WCSA - Company CC Billing Zip</description>
    <inlineHelpText>Voice - WCSA - Company CC Billing Zip</inlineHelpText>
    <label>CC Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>