force-app/main/default/objects/Voice_Company_CC__c/fields/CCMatch__c.field-meta.xml
<CustomField>
    <fullName>CCMatch__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Voice - WCSA Matching for unique cards - Prevent Duplicates</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA Matching for unique cards - Prevent Duplicates</inlineHelpText>
    <label>CCMatch</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>