force-app/main/default/objects/Voice_Company_CC__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Voice - WCSA - Company Credit Card First Name</description>
    <inlineHelpText>Voice - WCSA - Company Credit Card First Name</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>