force-app/main/default/objects/Voice_Company_CC__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Voice - WCSA - Company Credit Card Last Name</description>
    <inlineHelpText>Voice - WCSA - Company Credit Card Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>