force-app/main/default/objects/Voice_Company_CC__c/fields/Voice_Company_CC__c.field-meta.xml
<CustomField>
    <fullName>Voice_Company_CC__c</fullName>
    <description>Voice - WCSA - Company CC Number</description>
    <inlineHelpText>Voice - WCSA - Company CC Number</inlineHelpText>
    <label>CC Number</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>