force-app/main/default/objects/Voice_Company_CC__c/fields/Voice_Company_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Voice_Company_Credit_Card__c</fullName>
    <label>Voice: Company Credit Card</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Voice_Company_CC_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>